fix final jeopardy image alignment

--- a/css/jeopardy.css
+++ b/css/jeopardy.css
@@ -108,7 +108,7 @@ body {
 
 #final-jeopardy-logo-img{
     height: 65vh; 
-/*    width: 90vw; */
+    width: 100%; 
     object-fit: contain;
 }
 
